# arcox-agent

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json
archive/: README.md
archive/arc-dex-agent-legacy/: .env.example  README.md  package-lock.json  package.json
archive/arc-dex-agent-legacy/artifacts/: ArcoxApiPass.json  ArcoxNativeSwapBridgeRouter.json  ArcoxRouter.json
archive/arc-dex-agent-legacy/contracts/: ArcoxApiPass.sol  ArcoxNativeSwapBridgeRouter.sol  ArcoxRouter.sol
archive/arc-dex-agent-legacy/deployments/: arcox-api-pass.arc-testnet.json  arcox-native-swap-bridge-router.testnet.json  arcox-router.testnet.json
archive/arc-dex-agent-legacy/docs/: codex-cli-agent.md  native-swap-bridge-router.md  terminal-ai-agent.md
archive/arc-dex-agent-legacy/mcp/: README.md  registry.mjs  server.mjs
archive/arc-dex-agent-legacy/profile/: arcox-agent-profile.json
archive/arc-dex-agent-legacy/scripts/: compile-api-pass.mjs  compile-router.mjs  deploy-api-pass.mjs  deploy-native-swap-bridge-router.mjs  deploy-router.mjs  deploy-solana-router.mjs  enable-router-domain.mjs
archive/arc-dex-agent-legacy/solana-router/: Anchor.toml
archive/arc-dex-agent-legacy/solana-router/programs/arcox-solana-router/: Cargo.toml
archive/arc-dex-agent-legacy/solana-router/programs/arcox-solana-router/src/: lib.rs
lib/: config.mjs
scripts/: rotate-hermes-arcox-user.mjs
templates/: agent.env.example
test/: config.test.mjs
