[package]
name = "arcox-solana-router"
version = "0.1.0"
description = "ARCOX Solana Devnet router skeleton for platform-fee bridge/send flows."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arcox_solana_router"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
